<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <data>
        <variable
            name="contactaddmodel"
            type="domain.com.contacts.flowcontact.viewmodel.AddContactViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_5768e9"
            android:minHeight="?attr/actionBarSize" />

        <ImageView
            android:id="@+id/add_profile_picture"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/toolbar"
            app:imageUrl="@{contactaddmodel.imageUrl}"
            android:onClick="@{contactaddmodel::onPhotoClick}"
            android:src="@drawable/empty_image_placeholder_large" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contact_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_profile_picture"
            android:layout_marginLeft="@dimen/margin_22"
            android:layout_marginRight="@dimen/margin_22"
            app:hintTextAppearance="@android:style/TextAppearance.Large">

            <EditText
                android:id="@+id/contact_first_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text"
                android:text="@={contactaddmodel.firstName}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contact_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_22"
            android:layout_marginRight="@dimen/margin_22"
            android:layout_below="@id/contact_first_name"
            app:hintTextAppearance="@android:style/TextAppearance.Large">

            <EditText
                android:id="@+id/contact_last_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text"
                android:text="@={contactaddmodel.lastName}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contact_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_last_name"
            android:layout_marginLeft="@dimen/margin_22"
            android:layout_marginRight="@dimen/margin_22"
            app:hintTextAppearance="@android:style/TextAppearance.Large">

            <EditText
                android:id="@+id/contact_phone_number_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:text="@={contactaddmodel.phoneNumber}" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_phone_number"
            android:layout_marginLeft="@dimen/margin_22"
            android:layout_marginRight="@dimen/margin_22"
            app:hintTextAppearance="@android:style/TextAppearance.Large">

            <EditText
                android:id="@+id/contact_email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={contactaddmodel.emailAddress}" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id= "@+id/add_contact_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/save"
            android:layout_alignParentRight="true"
            android:layout_below="@id/contact_email"
            android:layout_margin="@dimen/margin_22"
            android:textColor="@color/black_54"
            android:enabled="@{contactaddmodel.saveEnabled}"
            android:onClick="@{contactaddmodel::onSaveClicked}"
            android:background="@drawable/button_enabled_background_selector"/>
    </RelativeLayout>
</layout>